Add plot from chapter 2 based on Pablo's feedback

--- a/notebooks/0-data_exploration/0.1-mbto-data-exploration.ipynb
+++ b/notebooks/0-data_exploration/0.1-mbto-data-exploration.ipynb
@@ -1538,9 +1538,9 @@
    "hash": "d07da0965434c7b5286d6cc9b9463c44a85c1c514696f673aad9eb5034120dfe"
   },
   "kernelspec": {
-   "display_name": "tesis-notebooks",
+   "display_name": "thesis-repo",
    "language": "python",
-   "name": "tesis-notebooks"
+   "name": "thesis-repo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1552,7 +1552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
