--- a/notebooks/1-solvent-experiment/1.2-mbto-plot-comparing-solvent-models-Copy1.ipynb
+++ b/notebooks/1-solvent-experiment/1.2-mbto-plot-comparing-solvent-models-Copy1.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "af4bd999",
    "metadata": {},
    "source": [
     "-entrenamos en GBL\n",
@@ -17,8 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "67da4c94",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "cc90ae07",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "d7b7793f",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7994f2b7-6b27-4d8a-82cd-d065342e6138",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,8 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "03f77ae1",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,8 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "94718596",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,8 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a26f32a4-1300-4135-a101-58b3101ea218",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +97,7 @@
        "['Gamma-Butyrolactone', 'Dimethyl sulfoxide', 'Dimethylformamide']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,8 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "20d5d2e3-be71-4573-b152-782b35113f53",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "47e03c25-7215-4550-931c-86e113a32553",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,8 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "5986cd85-3352-45e8-9c27-0657c27eec42",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,8 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "48c8998c-9b33-493e-8a64-1d2e2f0198e8",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +169,7 @@
        " 'MULTI_DMF': {'keywords': ['Dimethylformamide', 'multisolvent']}}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,8 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "c5f282b3",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,8 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "af0e192f",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,19 +228,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bd871d00-8a9d-4b04-906a-b2926796f528",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'solvent_exp_2' is not defined",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../../results/solvent_exp_2'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_490166/720015659.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_exp_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmerge_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msolvent_exp_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexperiments_info\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'solvent_exp_2' is not defined"
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_157783/720015659.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_exp_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmerge_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msolvent_exp_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexperiments_info\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_157783/4268789488.py\u001b[0m in \u001b[0;36mmerge_files\u001b[0;34m(files_dir, experiments_info)\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mexperiment_tag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexp_info\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexperiments_info\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mkeywords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mexp_info\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"keywords\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m         \u001b[0mexp_files_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_files_containing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiles_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey_words\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkeywords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         df_exp_data = pd.concat([load_melted_classi_report(file, experiment_tag) for file \n",
+      "\u001b[0;32m/tmp/ipykernel_157783/3601082793.py\u001b[0m in \u001b[0;36mload_files_containing\u001b[0;34m(dir_src_path, key_words, not_keywords, extension)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_files_containing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir_src_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey_words\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnot_keywords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextension\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     files = [file_path for file_path in dir_src_path.iterdir() \\\n\u001b[0m\u001b[1;32m      3\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfile_path\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_posix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkeyword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkey_words\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                 and not any(keyword in file_path.as_posix() for keyword in not_keywords)]\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_157783/3601082793.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_files_containing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir_src_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey_words\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnot_keywords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextension\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     files = [file_path for file_path in dir_src_path.iterdir() \\\n\u001b[0m\u001b[1;32m      3\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeyword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfile_path\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_posix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mkeyword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkey_words\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                 and not any(keyword in file_path.as_posix() for keyword in not_keywords)]\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.7.4/lib/python3.7/pathlib.py\u001b[0m in \u001b[0;36miterdir\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1088\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_closed\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1089\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_raise_closed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1090\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1091\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'..'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1092\u001b[0m                 \u001b[0;31m# Yielding a path object for these makes little sense\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../../results/solvent_exp_2'"
      ]
     }
    ],
@@ -265,7 +254,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3722545d",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +275,6 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "1cbe30df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +357,6 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "9b098bf2",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +377,6 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "b43a5a60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +387,6 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "6ec6cc90",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +409,6 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "e8f6eef0",
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +431,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1855764",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -456,9 +438,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "thesis-repo",
    "language": "python",
-   "name": "python3"
+   "name": "thesis-repo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -470,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
