--- a/notebooks/2-ensembles/2.2-mbto-homogeneous-ensemble-grid_search-Copy1.ipynb
+++ b/notebooks/2-ensembles/2.2-mbto-homogeneous-ensemble-grid_search-Copy1.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "083e7e42",
    "metadata": {},
    "source": [
     "# Ensambles"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa813db",
    "metadata": {},
    "source": [
     "Question: Could be use data from minotiry solvents? Does it add value/relevant information?\n",
@@ -25,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f2215afb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "29cef52b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c0ae31fa-8262-4359-9b9c-5c3c4177c08c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,14 +75,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ba155e9d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/mticona/Documents/tesis/licentiate-thesis-repo\n"
+      "/home/belu/VS Workplace/licentiate-thesis-repo\n"
      ]
     }
    ],
@@ -98,7 +92,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8c8ade86-9b43-455a-8af2-ff496da22e13",
    "metadata": {
     "tags": []
    },
@@ -113,18 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "c20c6d6a-9ff2-4f9e-80a5-3646bf3b8f03",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test_train = pd.read_csv(PATH_DATA+FILE_TEST_TRAIN)"
+    "#df_test_train = pd.read_csv(PATH_DATA+FILE_TEST_TRAIN)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c603edac-0376-4019-ac38-eb8675fed52a",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +161,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "758fec44-2120-47f4-a390-c7c93942ea9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +169,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4275c7c-1f78-4b1e-b5bc-8bc25daed37a",
    "metadata": {
     "tags": []
    },
@@ -201,7 +190,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "94ab93b1-0357-487c-ae51-170e33e9a891",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +308,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "86af911a-5f68-4284-9283-bf22e2ce8ab9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +384,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ac941ef6-076a-404e-be5e-b0a2bc10f514",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +436,7 @@
     "                                  file_name='no_file_name.csv'):\n",
     "    grid_params = {}\n",
     "    grid_params['model__n_estimators'] = model__n_estimators\n",
-    "    #grid_params['model__base_estimator'] = [make_model(models[base_estimator_name], model_config=base_estimator_param)]\n",
+    "    grid_params['model__base_estimator'] = [make_model(models[base_estimator_name], model_config=base_estimator_param)]\n",
     "    grid_params['model__n_jobs'] = [-1]\n",
     "    grid_params['model__random_state'] = [1,2,3,4,5,6]\n",
     "    \n",
@@ -468,7 +454,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a108b70a-534b-437b-b32d-d5a26271a722",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +474,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "32a7a564-0179-4ed1-b51b-b78e59b5ebc6",
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +491,7 @@
     "\n",
     "# explore regularization\n",
     "model__n_estimators = [1,3, 5, 20, 100, 300, 500]\n",
-    "file_depth = 'final_bagging_estimators.csv'\n",
+    "file_depth = '_final_bagging_estimators.csv'\n",
     "df_bagging = run_param_exploration_bagging(bagging_models[2],\n",
     "                                           bagging_models_args[2],\n",
     "                                           model__n_estimators, file_name=file_depth, n_iter=80)"
@@ -516,7 +500,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "78d0e1a3-5173-4b0d-b46b-a9c396ed733b",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +535,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "15459066-bce2-4cf8-bad8-66dd413c13d3",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +570,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "5d90904c-e0d4-4cc5-868c-78d0029d022c",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +605,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "910e7017-44dd-45cf-aa9b-5bc57f8583ed",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +630,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9140028e-c3a9-441b-8d0b-a14633f4eabd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +641,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "1ac78be8-c9ca-495a-99c8-ec78623d6b96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +666,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b9d3523f-1f60-4329-98ed-b4adedee6e94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +678,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "ca48ee8d-6733-48ec-a66c-d2765866fbe0",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +712,6 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "4e4f108b-131c-4f54-a943-5f65ff72a5e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +739,6 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "504937d4-1c03-4fc8-af6a-82084186a496",
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +764,6 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "90687b7c-0f7c-4db4-90b4-352f5a4d9557",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +788,6 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "a6cd12c3-dd1c-4080-9433-22ae401ef8d8",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +809,6 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "0cdcd3d9-4b5c-4136-be72-510c9bbe4e81",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +833,6 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "d2c04922-0c3e-472a-aa11-8a4a8fb6186d",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +867,6 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "e1080a18-2f07-465d-a146-d9f606b2524f",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +901,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "174d1db2-0195-4de0-bd2d-b34ab697b7af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +930,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7b8de4a0-6583-4009-a866-0c5049bdda7d",
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1004,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "1842bbf6-2774-40c0-9a35-088c277674f2",
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1032,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5d5c4c6a-e08b-49ae-a18f-52ee141cda91",
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1056,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "547c93d7-2499-4c9a-9d86-82dc13355b6f",
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1080,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "976fe9f8-7ded-463d-8940-35a76c3a4937",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1104,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fb372e34-f826-46ff-a4d5-097f0b10434d",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1135,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c5a30ad5-712f-4ba5-92a6-acc8b93bc938",
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1279,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f888d1ee-5ceb-4f13-a1b3-2d46d10106e0",
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1310,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c6236206-0350-484f-83a3-c0001d2c6670",
    "metadata": {},
    "outputs": [
     {
@@ -1375,7 +1334,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "613d7d88-aff4-47c5-b240-3b817c33d42e",
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1358,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "be604566-b520-4818-99f1-dfabfc8a8300",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1368,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "43953e41-dba8-441b-8bb8-0acd4d96c4c7",
    "metadata": {},
    "outputs": [
     {
@@ -1444,7 +1400,6 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "ccdc94ed-ccc7-4647-896f-a506aef3584f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1471,7 +1426,6 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "f510bb44-65ea-47b0-8955-adb42bad0df8",
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1460,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c300966f-1c15-4c67-9373-0f843ae5dbd1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1514,7 +1467,6 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "9576cab6-7103-4db5-9923-7e3e4eb1a9a2",
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1491,6 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "91b07fda-626b-4950-b841-8865b04059d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,7 +1505,6 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "cc010323-868c-4aab-90f4-d334b7c5dc10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1514,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff6b61bc-95df-4561-a5af-5e32c406d670",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1575,7 +1524,6 @@
   {
    "cell_type": "code",
    "execution_count": 284,
-   "id": "cad17b93-baab-4930-834a-731203e2d5d9",
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1547,6 @@
   {
    "cell_type": "code",
    "execution_count": 285,
-   "id": "2d2429cb-d01c-424d-866b-a70063363b03",
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1569,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e5537a7-4b1d-41e7-a1bb-d0203750f030",
    "metadata": {},
    "source": [
     "## Experiments"
@@ -1630,7 +1576,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86a8b4d0-681b-4c9a-a659-15efe8a3f928",
    "metadata": {},
    "source": [
     "### Experiment 1: diversity by parameters"
@@ -1639,7 +1584,6 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "a8e83e0b-9707-4cc8-944f-edc60d38e8ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1659,7 +1603,6 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "4dde309a-9378-4de4-87bc-52dc5517c3b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1612,6 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "9dcbc3ca-57c8-4401-98a8-3f179ca94cfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1711,7 +1653,6 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "id": "5c83bef0-4d5a-45d2-ab4a-6e0c4a20cc8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1721,7 +1662,6 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "3d5ad058-d8e8-4682-ae33-c4960f5fa50b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1671,6 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "id": "e9205869-d268-4932-aa81-f0ca29b92905",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1680,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "865e256f-15f2-4707-b0c4-33da131f2715",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1751,7 +1689,6 @@
   {
    "cell_type": "code",
    "execution_count": 259,
-   "id": "2c1a0783-eff3-428e-a226-09af6351939d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1762,7 +1699,6 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "0e888ad7-df14-49bd-992f-9126abd55478",
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1724,6 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "d57321e7-71e8-4381-8486-724bbd96b53b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1830,7 +1765,6 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "542071c8-2978-470b-a0b9-014ecd773d6b",
    "metadata": {},
    "outputs": [
     {
@@ -1918,7 +1852,6 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "26a32577-187b-4b83-8d54-d1f1648804c1",
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +1939,6 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "087a426d-a74b-410b-b7c5-e52841d34074",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2043,7 +1975,6 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "5650821d-730b-4c9d-becb-cee72244084c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2053,7 +1984,6 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "37e689f3-5639-41a3-9db6-67628ce3d609",
    "metadata": {},
    "outputs": [
     {
@@ -2149,7 +2079,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c042c51",
    "metadata": {},
    "source": [
     "Features importances only computed for RandomForest"
@@ -2158,7 +2087,6 @@
   {
    "cell_type": "code",
    "execution_count": 1058,
-   "id": "48d7e176",
    "metadata": {},
    "outputs": [
     {
@@ -2179,7 +2107,6 @@
   {
    "cell_type": "code",
    "execution_count": 1059,
-   "id": "e729ff71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2116,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b0d6561",
    "metadata": {},
    "source": [
     "model_cols = list(df_solvent_full_train.columns)\n",
@@ -2198,7 +2124,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22692c0a",
    "metadata": {},
    "source": [
     "df_importance = pd.DataFrame({\"feature\": model_cols,\n",
@@ -2209,7 +2134,6 @@
   {
    "cell_type": "code",
    "execution_count": 1060,
-   "id": "d171e540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2218,7 +2142,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "883c9971",
    "metadata": {},
    "source": [
     "df_importance = pd.read_csv(\"random_forest_feat_importances.csv\")"
@@ -2227,7 +2150,6 @@
   {
    "cell_type": "code",
    "execution_count": 1061,
-   "id": "6d6207d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2236,7 +2158,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3c7a9fa",
    "metadata": {},
    "source": [
     "plot_title = \"figures/feature_importances.pdf\"\n",
@@ -2272,7 +2193,6 @@
   {
    "cell_type": "code",
    "execution_count": 1062,
-   "id": "3d2e4d33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2286,7 +2206,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a6ef9c",
    "metadata": {},
    "source": [
     "indexes = np.arange(0,60,6)"
@@ -2294,7 +2213,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1113e6ac",
    "metadata": {},
    "source": [
     "tmp = df_importance.iloc[3:,:].reset_index(drop=True)\n",
@@ -2303,7 +2221,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb0de25a",
    "metadata": {},
    "source": [
     "tmp['color'] = np.where(tmp['feature'].str.startswith(\"solvent\"), 'red', 'grey')"
@@ -2311,7 +2228,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e589893b",
    "metadata": {},
    "source": [
     "solvent_index = tmp[tmp.feature.str.startswith(\"solvent\")].index"
@@ -2319,7 +2235,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "786b45ad",
    "metadata": {},
    "source": [
     "plot_df_importances(tmp.iloc[list(indexes) + list(solvent_index)]\\\n",
@@ -2329,7 +2244,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "677a63fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2340,9 +2254,9 @@
    "hash": "2dd68b6b88d78f72e555cd6564eaf72c9813991942e2722f811fa2c9051f75f2"
   },
   "kernelspec": {
-   "display_name": "tesis-notebooks",
+   "display_name": "thesis-repo",
    "language": "python",
-   "name": "tesis-notebooks"
+   "name": "thesis-repo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2354,7 +2268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
