--- a/notebooks/2-ensembles/2.2-mbto-homogeneous-ensemble-voting.ipynb
+++ b/notebooks/2-ensembles/2.2-mbto-homogeneous-ensemble-voting.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "083e7e42",
    "metadata": {},
    "source": [
     "# Ensambles"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa813db",
    "metadata": {},
    "source": [
     "Question: Could be use data from minotiry solvents? Does it add value/relevant information?\n",
@@ -25,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f2215afb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "29cef52b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +53,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c0ae31fa-8262-4359-9b9c-5c3c4177c08c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ba155e9d",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +94,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8c8ade86-9b43-455a-8af2-ff496da22e13",
    "metadata": {
     "tags": []
    },
@@ -116,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c20c6d6a-9ff2-4f9e-80a5-3646bf3b8f03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +120,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c603edac-0376-4019-ac38-eb8675fed52a",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +165,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "758fec44-2120-47f4-a390-c7c93942ea9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +174,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4275c7c-1f78-4b1e-b5bc-8bc25daed37a",
    "metadata": {
     "tags": []
    },
@@ -206,7 +195,6 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "94ab93b1-0357-487c-ae51-170e33e9a891",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +393,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "86af911a-5f68-4284-9283-bf22e2ce8ab9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +471,6 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "5b23b5b1-39ed-414d-b2af-700e4f7a1149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +538,6 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "359b201f-abc3-46c5-aa3e-419b78ed8a34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +550,6 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "2201c6be-ab4b-4e3a-9b9c-c8d83d4fd44a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +573,6 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "9f4b227f-44fb-4113-a434-c7ac4383fd6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +596,6 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "5dbda6b9-2a60-44b3-bf1e-f6a3fb2988ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +605,6 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "81ad38f4-88c7-4904-a494-bc0134c88fc9",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +628,6 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "5f841c62-00b1-4d25-9f77-1bf46ccfe3f0",
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1136,6 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "dd4efd54-948e-4e1c-b36b-1cdd75f99081",
    "metadata": {},
    "outputs": [
     {
@@ -2025,7 +2004,6 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "dcea27ca-4f80-4f16-adae-945a9e5afa5b",
    "metadata": {},
    "outputs": [
     {
@@ -2045,7 +2023,6 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "1604b655-3553-4818-ab8d-1a5bed6c6de7",
    "metadata": {},
    "outputs": [
     {
@@ -2065,7 +2042,6 @@
   {
    "cell_type": "code",
    "execution_count": 251,
-   "id": "719ab95d-5df9-41fd-978b-3a2a6a56213f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2075,7 +2051,6 @@
   {
    "cell_type": "code",
    "execution_count": 273,
-   "id": "f7619d9e-ab57-42c8-b915-1c85b55d71a9",
    "metadata": {},
    "outputs": [
     {
@@ -2974,7 +2949,6 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "5face114-40c9-4d7d-848e-5646aa18f138",
    "metadata": {},
    "outputs": [
     {
@@ -3130,7 +3104,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9a71fc2-197c-4816-98e3-8ae8fe33abb8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3138,7 +3111,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5c1a3c1-cffd-4273-b4e9-068b58aeac47",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3146,7 +3118,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ca82002-2461-43b4-bdce-33af2e058514",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3154,7 +3125,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26852537-81db-4723-bdf0-6ff58d86869a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3162,7 +3132,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2079f33-abb6-4bf3-846f-68b0121a633e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3170,7 +3139,6 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "4e4f108b-131c-4f54-a943-5f65ff72a5e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3198,7 +3166,6 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "504937d4-1c03-4fc8-af6a-82084186a496",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3212,7 +3179,6 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "1c1d95ff-2123-46e0-b32b-b65902409e63",
    "metadata": {},
    "outputs": [
     {
@@ -3247,7 +3213,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7225ac8-7c2b-4720-9063-1912d12a27ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3272,7 +3237,6 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "90687b7c-0f7c-4db4-90b4-352f5a4d9557",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3297,7 +3261,6 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "a6cd12c3-dd1c-4080-9433-22ae401ef8d8",
    "metadata": {},
    "outputs": [
     {
@@ -3319,7 +3282,6 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "0cdcd3d9-4b5c-4136-be72-510c9bbe4e81",
    "metadata": {},
    "outputs": [
     {
@@ -3344,7 +3306,6 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "d2c04922-0c3e-472a-aa11-8a4a8fb6186d",
    "metadata": {},
    "outputs": [
     {
@@ -3379,7 +3340,6 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "e1080a18-2f07-465d-a146-d9f606b2524f",
    "metadata": {},
    "outputs": [
     {
@@ -3414,7 +3374,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "174d1db2-0195-4de0-bd2d-b34ab697b7af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3444,7 +3403,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7b8de4a0-6583-4009-a866-0c5049bdda7d",
    "metadata": {},
    "outputs": [
     {
@@ -3519,7 +3477,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "1842bbf6-2774-40c0-9a35-088c277674f2",
    "metadata": {},
    "outputs": [
     {
@@ -3548,7 +3505,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5d5c4c6a-e08b-49ae-a18f-52ee141cda91",
    "metadata": {},
    "outputs": [
     {
@@ -3573,7 +3529,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "547c93d7-2499-4c9a-9d86-82dc13355b6f",
    "metadata": {},
    "outputs": [
     {
@@ -3598,7 +3553,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "976fe9f8-7ded-463d-8940-35a76c3a4937",
    "metadata": {},
    "outputs": [
     {
@@ -3623,7 +3577,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fb372e34-f826-46ff-a4d5-097f0b10434d",
    "metadata": {},
    "outputs": [
     {
@@ -3655,7 +3608,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c5a30ad5-712f-4ba5-92a6-acc8b93bc938",
    "metadata": {},
    "outputs": [
     {
@@ -3800,7 +3752,6 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f888d1ee-5ceb-4f13-a1b3-2d46d10106e0",
    "metadata": {},
    "outputs": [
     {
@@ -3832,7 +3783,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c6236206-0350-484f-83a3-c0001d2c6670",
    "metadata": {},
    "outputs": [
     {
@@ -3857,7 +3807,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "613d7d88-aff4-47c5-b240-3b817c33d42e",
    "metadata": {},
    "outputs": [
     {
@@ -3882,7 +3831,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "be604566-b520-4818-99f1-dfabfc8a8300",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3893,7 +3841,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "43953e41-dba8-441b-8bb8-0acd4d96c4c7",
    "metadata": {},
    "outputs": [
     {
@@ -3926,7 +3873,6 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "ccdc94ed-ccc7-4647-896f-a506aef3584f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3953,7 +3899,6 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "f510bb44-65ea-47b0-8955-adb42bad0df8",
    "metadata": {},
    "outputs": [
     {
@@ -3988,7 +3933,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c300966f-1c15-4c67-9373-0f843ae5dbd1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3996,7 +3940,6 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "9576cab6-7103-4db5-9923-7e3e4eb1a9a2",
    "metadata": {},
    "outputs": [
     {
@@ -4021,7 +3964,6 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "91b07fda-626b-4950-b841-8865b04059d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4036,7 +3978,6 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "cc010323-868c-4aab-90f4-d334b7c5dc10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4046,7 +3987,6 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "ff6b61bc-95df-4561-a5af-5e32c406d670",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4057,7 +3997,6 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "cad17b93-baab-4930-834a-731203e2d5d9",
    "metadata": {},
    "outputs": [
     {
@@ -4082,7 +4021,6 @@
   {
    "cell_type": "code",
    "execution_count": 285,
-   "id": "2d2429cb-d01c-424d-866b-a70063363b03",
    "metadata": {},
    "outputs": [
     {
@@ -4105,7 +4043,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e5537a7-4b1d-41e7-a1bb-d0203750f030",
    "metadata": {},
    "source": [
     "## Experiments"
@@ -4113,7 +4050,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86a8b4d0-681b-4c9a-a659-15efe8a3f928",
    "metadata": {},
    "source": [
     "### Experiment 1: diversity by parameters"
@@ -4122,7 +4058,6 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "a8e83e0b-9707-4cc8-944f-edc60d38e8ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4142,7 +4077,6 @@
   {
    "cell_type": "code",
    "execution_count": 266,
-   "id": "4dde309a-9378-4de4-87bc-52dc5517c3b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4152,7 +4086,6 @@
   {
    "cell_type": "code",
    "execution_count": 267,
-   "id": "9dcbc3ca-57c8-4401-98a8-3f179ca94cfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4194,7 +4127,6 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "id": "5c83bef0-4d5a-45d2-ab4a-6e0c4a20cc8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4204,7 +4136,6 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "id": "3d5ad058-d8e8-4682-ae33-c4960f5fa50b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4214,7 +4145,6 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "id": "e9205869-d268-4932-aa81-f0ca29b92905",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4224,7 +4154,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "865e256f-15f2-4707-b0c4-33da131f2715",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4234,7 +4163,6 @@
   {
    "cell_type": "code",
    "execution_count": 259,
-   "id": "2c1a0783-eff3-428e-a226-09af6351939d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4245,7 +4173,6 @@
   {
    "cell_type": "code",
    "execution_count": 249,
-   "id": "0e888ad7-df14-49bd-992f-9126abd55478",
    "metadata": {},
    "outputs": [
     {
@@ -4271,7 +4198,6 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "d57321e7-71e8-4381-8486-724bbd96b53b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4313,7 +4239,6 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "542071c8-2978-470b-a0b9-014ecd773d6b",
    "metadata": {},
    "outputs": [
     {
@@ -4401,7 +4326,6 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "26a32577-187b-4b83-8d54-d1f1648804c1",
    "metadata": {},
    "outputs": [
     {
@@ -4489,7 +4413,6 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "087a426d-a74b-410b-b7c5-e52841d34074",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4526,7 +4449,6 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "5650821d-730b-4c9d-becb-cee72244084c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4536,7 +4458,6 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "37e689f3-5639-41a3-9db6-67628ce3d609",
    "metadata": {},
    "outputs": [
     {
@@ -4632,7 +4553,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c042c51",
    "metadata": {},
    "source": [
     "Features importances only computed for RandomForest"
@@ -4641,7 +4561,6 @@
   {
    "cell_type": "code",
    "execution_count": 1058,
-   "id": "48d7e176",
    "metadata": {},
    "outputs": [
     {
@@ -4662,7 +4581,6 @@
   {
    "cell_type": "code",
    "execution_count": 1059,
-   "id": "e729ff71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4672,7 +4590,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b0d6561",
    "metadata": {},
    "source": [
     "model_cols = list(df_solvent_full_train.columns)\n",
@@ -4681,7 +4598,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22692c0a",
    "metadata": {},
    "source": [
     "df_importance = pd.DataFrame({\"feature\": model_cols,\n",
@@ -4692,7 +4608,6 @@
   {
    "cell_type": "code",
    "execution_count": 1060,
-   "id": "d171e540",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4701,7 +4616,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "883c9971",
    "metadata": {},
    "source": [
     "df_importance = pd.read_csv(\"random_forest_feat_importances.csv\")"
@@ -4710,7 +4624,6 @@
   {
    "cell_type": "code",
    "execution_count": 1061,
-   "id": "6d6207d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4719,7 +4632,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3c7a9fa",
    "metadata": {},
    "source": [
     "plot_title = \"figures/feature_importances.pdf\"\n",
@@ -4755,7 +4667,6 @@
   {
    "cell_type": "code",
    "execution_count": 1062,
-   "id": "3d2e4d33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4769,7 +4680,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a6ef9c",
    "metadata": {},
    "source": [
     "indexes = np.arange(0,60,6)"
@@ -4777,7 +4687,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1113e6ac",
    "metadata": {},
    "source": [
     "tmp = df_importance.iloc[3:,:].reset_index(drop=True)\n",
@@ -4786,7 +4695,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb0de25a",
    "metadata": {},
    "source": [
     "tmp['color'] = np.where(tmp['feature'].str.startswith(\"solvent\"), 'red', 'grey')"
@@ -4794,7 +4702,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e589893b",
    "metadata": {},
    "source": [
     "solvent_index = tmp[tmp.feature.str.startswith(\"solvent\")].index"
@@ -4802,7 +4709,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "786b45ad",
    "metadata": {},
    "source": [
     "plot_df_importances(tmp.iloc[list(indexes) + list(solvent_index)]\\\n",
@@ -4812,7 +4718,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "677a63fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4823,9 +4728,9 @@
    "hash": "2dd68b6b88d78f72e555cd6564eaf72c9813991942e2722f811fa2c9051f75f2"
   },
   "kernelspec": {
-   "display_name": "tesis-notebooks",
+   "display_name": "thesis-repo",
    "language": "python",
-   "name": "tesis-notebooks"
+   "name": "thesis-repo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4837,7 +4742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
