--- a/notebooks/2-ensembles/2.1-mbto-generate-datasets.ipynb
+++ b/notebooks/2-ensembles/2.1-mbto-generate-datasets.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "083e7e42",
    "metadata": {},
    "source": [
     "# Solvent Small Experiment"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fa813db",
    "metadata": {},
    "source": [
     "Question: Could be use data from minotiry solvents? Does it add value/relevant information?\n",
@@ -25,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f2215afb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +41,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "29cef52b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +52,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "909b7fdb",
    "metadata": {
     "tags": []
    },
@@ -67,7 +62,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ba155e9d",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +79,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6969802-9d9e-42d4-905e-4d75cce70edd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -93,7 +86,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "902f8bf1-d5fa-4c86-84e1-04e63d4669c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +103,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "66a0d153-711e-4d6f-969d-5d7ad716ba96",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +125,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "06c3f0c5-bb9b-4006-a00a-e344caa9705f",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +145,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "da454387-b08f-4bf4-87ec-eba7013918a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +168,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "034d4b1f-b64e-4d0b-9ffe-5ce9a20ff7ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +177,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e00e456c-714c-42c0-8eb3-d2a29d107f0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +188,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "293f1649-315d-4e77-924a-4e566537dfef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +199,6 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "decb79ce-0682-447e-8e32-9db78d5cd547",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +208,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "2bc355b3-e314-4ecc-9df0-26efdefa212c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +217,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "46b6fe4d-d0f5-41c7-8e6f-ee3ff592e889",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +226,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "33a91778-acda-4148-9358-64ceb78a1d22",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +246,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ae0fa8bc-8cd7-468f-8ee9-6d68e03ccf17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +258,9 @@
    "hash": "2dd68b6b88d78f72e555cd6564eaf72c9813991942e2722f811fa2c9051f75f2"
   },
   "kernelspec": {
-   "display_name": "tesis-notebooks",
+   "display_name": "thesis-repo",
    "language": "python",
-   "name": "tesis-notebooks"
+   "name": "thesis-repo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -291,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
